<resources>
    <string name="app_name">JugsGraphic</string>
    <string name="new_simulation">New Simulation</string>
    <string name="repeat_simulation">Repeat Simulation</string>
    <string name="end_simulation">End Simulation</string>
    <string name="restart_simulation">Restart Simulation</string>
    <string name="stop_simulation">Stop Simulation</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="change_depth_limit">Change Depth Limit</string>

    <string name="preference_file_key">Files</string>

    <string-array name="mode">
        <item>"AUTOMATIC"</item>
        <item>"MANUAL"</item>
    </string-array>

    <string name="instructions">Instructions</string>
    <string name="title_activity_instructions">Instructions</string>

    <string name="action_settings">Settings</string>
    <string name="instructions_title">INSTRUCTIONS\n</string>
    <string name="presentation">This apk solves the famous \"Jugs Problem\".</string>
    <string name="layout_title">Layout:</string>
    <string name="goal_title">Goal:</string>
    <string name="operations_introduction">Only 3 operations with jugs are allowed:\n</string>
    <string name="rules_title">Rules:</string>
    <string name="operations1">1. Fill a jug up to the brim.\n</string>
    <string name="operations2">2. Empty a jug.\n</string>
    <string name="operations3">3. Pour the content of one jug into another one, until the first one ends up empty or the second one full.</string>
</resources>
